<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="6"
    tools:context="com.example.hesamodin.sec06.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layoutDirection="rtl"
        android:orientation="horizontal"
        android:weightSum="5">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingRight="20dp"
                    android:paddingTop="15dp"
                    android:text="@string/welcome"
                    android:textSize="20dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/firstcomment"
            android:textAlignment="center"
            android:textSize="17dp" />

        <LinearLayout
            android:orientation="vertical"
            android:weightSum="7"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="0dp"></LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:weightSum="3"
                android:layout_weight="4"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <Button
                    android:id="@+id/btnsignin"
                    android:textSize="20dp"
                    android:textColor="@android:color/white"
                    android:text="@string/signin"
                    android:background="@drawable/samplebtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"></LinearLayout>
                <Button
                    android:id="@+id/btnsignup"
                    android:textSize="20dp"
                    android:textColor="@android:color/white"
                    android:text="@string/signup"
                    android:background="@drawable/samplebtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"></LinearLayout>
                <Button
                    android:id="@+id/btn_exit_app"
                    android:textSize="20dp"
                    android:textColor="@android:color/white"
                    android:text="خروج"
                    android:background="@drawable/samplebtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
