<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="com.example.hesamodin.sec06.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layoutDirection="rtl"
        android:orientation="horizontal"
        android:paddingRight="15dp"
        android:weightSum="7">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:orientation="vertical"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="@string/loginactivitytitle"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"></LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:background="@color/activitybackground"
        android:orientation="vertical"
        android:weightSum="9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"></LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:layoutDirection="rtl"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/sampleedittext"
                android:drawableRight="@drawable/person"
                android:hint="@string/username"
                android:textAlignment="center" />

            <EditText
                android:inputType="numberPassword"
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/sampleedittext"
                android:drawableRight="@drawable/key"
                android:hint="@string/password"
                android:textAlignment="center" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="70dp"
                android:layout_marginTop="10dp"
                android:text="من را به خاطر بسپار" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/samplebtn"
                    android:text="ورود"
                    android:layout_marginLeft="10dp"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/samplebtn"
                    android:text="انصراف"
                    android:textColor="@android:color/white" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
